# docker-systemctl-replacement

./: .dockerignore  .gitignore  ARCHITECTURE.md  BUGS.md  DEFAULTPYTHON.md  DEVGUIDE.md  EUPL-LICENSE.md  EXTRA-CONFIGS.md  HINTS.md  HISTORY.md  INIT-DAEMON.md  Make_detect_py.mk  Makefile  Maketests  NOTES.md  PEP561.md  README  README.md  RELEASENOTES.md  RESTART-POLICY.md  SERVICE-MANAGER.md  STARTORDER.md  SYSTEMD-PROBLEMS.md  SYSTEMD_CONF.md  TESTSUITE.md  TYPEHINTS.md  USERMODE.md  azure-pipelines.yml  deformat3.py  docker_image.py  docker_local_image.py  docker_mirror.py  docker_mirror.pyi  format3.py  pyproject.toml  reply.py  requirements.txt  setup.cfg  test-centos7-lamp-stack.dockerfile  testsuite.py
.github/workflows/: lintcheck.yml  stylecheck.yml  typecheck.yml  unittests.yml
files/docker/: HINTS.md  hostnamectl3.py  journalctl3.py  localectl3.py  py.typed  systemctl.py  systemctl2.py  systemctl3.py
files/docker/tests/: test_checkstatus.py
notes/: HINTS.md  NOTES.md
src/: Makefile  journalctl3.py  makeheader.py  systemctl-init-data-test.c  systemctl-init-data.c  systemctl-init.c  systemctl-init.h  systemctl-logging.c  systemctl-logging.h  systemctl-options.c  systemctl-options.h  systemctl-regex.c  systemctl-regex.h  systemctl-shlex.c  systemctl-shlex.h  systemctl-types-test.c  systemctl-types.c  systemctl-types.h  systemctl3.py
systemctl2/: systemctl3.py
tests/: ansibletests5.py  apache2-opensuse-15.dockerfile  apache2-opensuse15-py2.dockerfile  apache2-opensuse15.dockerfile  apache2-ubuntu-16.dockerfile  apache2-ubuntu-22.dockerfile  apache2-ubuntu16-py2.dockerfile  apache2-ubuntu16.dockerfile  apache2-ubuntu18.dockerfile  apache2-ubuntu22-py2.dockerfile  apache2-ubuntu22.dockerfile  basetests.py  buildtests.py  buildtests4.py  centos-elasticsearch.dockerfile  centos-httpd.dockerfile  centos-lamp.dockerfile  centos-postgres.dockerfile  cntlm-alma9.dockerfile  develtests8.py  docker-build-compose.ini  docker-build-compose.yml  docker-build-playbook.yml  docker-build-stop.yml  docker-compose-build.ini  docker-compose-build.yml  docker-compose-start.yml  docker-compose-startplay.yml  docker-start-compose.ini  docker-start-playbook.yml  docker_mirror.py  docker_mirror.pyi  dockertests3.py  docktests.py  download-firefox.yml  download-jenkins.yml  download-selenium.yml  exectests.py  functests.py  httpd-alma9-not-user.dockerfile  (+36 more)
tests/roles/desktop-firefox-restart/defaults/: main.yml
tests/roles/desktop-firefox-restart/tasks/: start.yml  stop.yml
tests/roles/desktop-firefox/defaults/: main.yml
tests/roles/desktop-firefox/tasks/: cleanrepo.yml  install_firefox.yml  install_java.yml  machine-id.yml  main.yml  software_download.yml  software_upload.yml
tests/roles/desktop-xvnc-restart/defaults/: main.yml
tests/roles/desktop-xvnc-restart/tasks/: start.yml  stop.yml
tests/roles/desktop-xvnc/defaults/: main.yml
tests/roles/desktop-xvnc/files/: xvnc.init  xvnc.service
tests/roles/desktop-xvnc/tasks/: cleanrepo.yml  enable_software.yml  install_software.yml  install_systemd.yml  main.yml
tests/roles/jenkins-restart/defaults/: main.yml
tests/roles/jenkins-restart/tasks/: start.yml  stop.yml
tests/roles/jenkins/defaults/: main.yml
tests/roles/jenkins/tasks/: enable_software.yml  install_java.yml  install_software.yml  main.yml  software_download.yml  software_upload.yml
tests/roles/selenium-server-restart/defaults/: main.yml
tests/roles/selenium-server-restart/tasks/: main.yml  start.yml  stop.yml
tests/roles/selenium-server/defaults/: main.yml
tests/roles/selenium-server/files/: selenium.conf  selenium.service
tests/roles/selenium-server/tasks/: enable_software.yml  install_java.yml  install_selenium-geckodriver.yml  install_selenium-python.yml  install_selenium-server.yml  install_systemd.yml  main.yml  software_download-geckodriver.yml  software_download-python.yml  software_download-server.yml  software_upload-geckodriver.yml  software_upload-python.yml  software_upload-server.yml
types/: systemctl3.pyi
