# __version__

[metadata]
name = docker-systemctl-replacement
version = 1.5.2495"
author = Guido U. Draheim
author-email = Guido.Draheim@gmx.de
home-page = https://github.com/gdraheim/docker-systemctl-replacement
description = allows to deploy to systemd-controlled containers without starting an actual systemd daemon
long-description = file: README.md

[pycodestyle]
max-line-length = 188 
ignore = E301,E302,E305,E306,E701

[mypy]
## strict = true # not allowed in setup.cfg
unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true 
disallow_incomplete_defs = true 
check_untyped_defs = true
disallow_untyped_decorators = true 
no_implicit_optional = true 
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
##
disallow_any_unimported = true
# disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
